2015-05-17  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Version 1.79.1 released.

2015-05-16  Carl Hetherington  <cth@carlh.net>

	* Update DCP name on changing DCP standard (#570).

	* Fix `programming error' on audio analysis
	with a -ve delay (#571).

2015-05-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.79.0 released.

2015-05-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.14 released.

2015-05-13  c.hetherington  <cth@carlh.net>

	* Replace audio analysis saving code with new approach
	which is (hopefully) more robust.

2015-05-11  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 1.78.13 released.

2015-05-11  carl  <cth@carlh.net>

	* Hopefully fix truncated text in the colour conversion
	dialog on OS X.

2015-05-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.12 released.

2015-05-09  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

	* Version 1.78.11 released.

2015-05-09  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 1.78.10 released.

2015-05-07  carl  <cth@carlh.net>

	* Tidy audio analysis dialogue a bit and add a note of
	the overall peak (#557).

	* Fix sometimes-missing channel labels on OS X audio analysis.

2015-05-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.9 released.

2015-05-06  Carl Hetherington  <cth@carlh.net>

	* Efficiency fix for cases where there is a lot of processing
	power.

2015-05-05  c.hetherington  <cth@carlh.net>

	* Add UTF-8 content type to KDM emails to try to fix #549.

	* Only enable OK button in certificate download dialogues
	when a download has succeeded (#404).

2015-05-04  Carl Hetherington  <cth@carlh.net>

	* Remove user configuration of colour conversion presets.

	* Version 1.78.8 released.

2015-05-04  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.
